kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.192.168.99.100.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 8080
  - host: goodbye.192.168.99.100.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: goodbye-world
          servicePort: 8080
